# support_bot

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  justfile  main.py  pyproject.toml  single_bot.py
.github/workflows/: docker-image.yml
.linters/: README.md
adr/: README.md
bot/: reactions.py
bot/customizations/: __init__.py  default.py  helper.py  interface.py  loader.py  registry.py  test_customization.py
bot/middlewares/: config.py  db.py
bot/routers/: admin.py  admin_dialog.py  supports.py
config/: bot_config.py
database/: models.py  redis_tools.py  repositories.py
docs/: architecture.md  conventions.md  glossary.md  golden-principles.md
docs/exec-plans/active/: _template.md
docs/exec-plans/completed/: 2026-02-25-quality-commands-bootstrap.md  2026-03-06-aiogram-update.md  2026-03-06-forwarded-message-ux.md  2026-03-06-supports-pyright.md  2026-04-10-badrequest-logging.md  2026-06-16-spam-block-words.md  (+4 more)
docs/runbooks/: README.md  reactions-in-restricted-chats.md  switching-to-local-bot-api.md
tests/: conftest.py  test_bot_factory.py  test_chat_member_logging.py  test_customization.py  test_e2e_flow.py  test_e2e_startup.py  test_edit_message.py  test_forwarded_message_formatting.py  test_handlers.py  test_ignore.py  test_local_names.py  test_main_startup.py  test_reaction_availability_cache.py  test_reaction_matrix.py  test_reaction_propagation.py  test_reply_deleted.py  test_single_bot_startup.py  test_spam_protection.py  test_startup_error.py  test_webhook_updates.py
(+2 files in other folders)
